# advent-of-code-2020-rust

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
src/: day09-encoding-error.rs  day1-report-repair.rs  day10-adapter-array.rs  day12-rain-risk.rs  day13-shuttle-search.rs  day14-docking-data.rs  day15-rambunctious-recitation.rs  day17-conway-cubes.rs  day2-password-philosophy.rs  day22-crab-combat.rs  day24-lobby-layout.rs  day25-combo-breaker.rs  day8-handheld-halting.rs  tools.rs
