[package]
name = "advent-of-code-2020-rust"
version = "0.1.0"
authors = ["Tom Lankhorst <hello@tomlankhorst.nl>"]
edition = "2018"

[[bin]]
name = "day01"
path = "src/day01-report-repair.rs"

[[bin]]
name = "day02"
path = "src/day02-password-philosophy.rs"

[[bin]]
name = "day08"
path = "src/day08-handheld-halting.rs"

[[bin]]
name = "day09"
path = "src/day09-encoding-error.rs"

[[bin]]
name = "day10"
path = "src/day10-adapter-array.rs"

[[bin]]
name = "day12"
path = "src/day12-rain-risk.rs"

[[bin]]
name = "day13"
path = "src/day13-shuttle-search.rs"

[[bin]]
name = "day14"
path = "src/day14-docking-data.rs"

[[bin]]
name = "day15"
path = "src/day15-rambunctious-recitation.rs"

[[bin]]
name = "day17"
path = "src/day17-conway-cubes.rs"

[[bin]]
name = "day22"
path = "src/day22-crab-combat.rs"

[dependencies]
ndarray = "0.14.0"